--- a/Pages/Disaster/Profile/AllocateEC.cshtml
+++ b/Pages/Disaster/Profile/AllocateEC.cshtml
@@ -24,73 +24,68 @@
     </div>
 }
 
-<div class="container p-2 form-container">
+<div class="bg-light rounded px-2 py-0 my-3">
+    <form method="POST" id="saveAllocateEC">
+        <h1 class="display-5 fw-bold text-center">Allocate Evacuation Center</h1>
+        <br />
 
-    <div class="container mt-4 form-container-content">
+        <input type="hidden" name="disasterID" value="@Model.disasterInfo.disasterID" />
 
-        <div class="row">
-            <div class="col text-center">
-                <h1>Allocate Evacuation Center</h1>
-            </div>
-        </div>
-        <form method="POST" id="saveAllocateEC">
-            <input type="hidden" name="disasterID" value="@Model.disasterInfo.disasterID" />
-            <div class="row pt-4">
-                <div class="col-lg-12">
-                    <table id="allocate-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
-                        <thead>
+        <div class="row pt-4">
+            <div class="col-lg-12">
+                <table id="allocate-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="selectAllCheckboxes">
+                                    <label class="form-check-label"></label>
+                                </div>
+                            </th>
+                            <th>Evacuation Center</th>
+                            <th>Type</th>
+                            <th>Barangay</th>
+                            <th>Max Capacity</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.listEvacuation)
+                        {
                             <tr>
-                                <th>
+                                <td width="5%">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="selectAllCheckboxes">
+                                        <input class="form-check-input" type="checkbox" value="@item.centerID" id="evacuationCenter" name="selectedEvacuationCenters[]">
                                         <label class="form-check-label"></label>
                                     </div>
-                                </th>
-                                <th>Evacuation Center</th>
-                                <th>Type</th>
-                                <th>Barangay</th>
-                                <th>Max Capacity</th>
+                                </td>
+                                <td width="30%">@item.centerName</td>
+                                <td width="20%" style="text-align: center;">@item.centerType</td>
+                                <td width="30%" style="text-align: center;">@item.barangayName</td>
+                                <td width="15%" style="text-align: center;">@item.maxCapacity</td>
                             </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model.listEvacuation)
-                            {
-                                <tr>
-                                    <td width="5%">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="@item.centerID" id="evacuationCenter" name="selectedEvacuationCenters[]">
-                                            <label class="form-check-label"></label>
-                                        </div>
-                                    </td>
-                                    <td width="30%">@item.centerName</td>
-                                    <td width="20%" style="text-align: center;">@item.centerType</td>
-                                    <td width="30%" style="text-align: center;">@item.barangayName</td>
-                                    <td width="15%" style="text-align: center;">@item.maxCapacity</td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
+                        }
+                    </tbody>
+                </table>
 
-                    @if (!string.IsNullOrEmpty(Model.successMessage))
-                    {
-                        <div class="alert alert-success alert-dismissible fade show" role="alert">
-                            <strong>@Model.successMessage</strong>
-                            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                        </div>
-                    }
-
-                    <!-- Cancel and Save Selection Button -->
-                    <div class="button-spacer">
-                        <a class="btn btn-outline-secondary mr-10" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID">Cancel</a>
-                        <button type="button" class="btn btn-primary" name="saveSelection" 
-                            data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
-                            Allocate
-                        </button>
+                @if (!string.IsNullOrEmpty(Model.successMessage))
+                {
+                    <div class="alert alert-success alert-dismissible fade show" role="alert">
+                        <strong>@Model.successMessage</strong>
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                     </div>
+                }
+
+                <!-- Cancel and Save Selection Button -->
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                    <a href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" role="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
+                    <button type="button" class="btn btn-primary px-4" name="saveSelection"
+                            data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>
+                        Allocate
+                    </button>
                 </div>
             </div>
-        </form>
-    </div>
+        </div>
+    </form>
 </div>
 
 <!-- Modal: Confirm Selection -->
