--- a/Pages/disaster/profile/Edit.cshtml
+++ b/Pages/disaster/profile/Edit.cshtml
@@ -25,37 +25,29 @@
 	</div>
 }
 
-<div class="container p-2 form-container">
-	<div class="container mt-4 form-container-content">
-		<div class="row">
-			<div class="col text-center">
-				<h1>Edit Disaster</h1>
-			</div>
-		</div>
 
-		<div class="row pt-4">
-			<form method="POST" id="editDisasterForm">
-				<input type="hidden" name="disasterID" value="@Model.disasterInfo.disasterID" />
+<div class="bg-light rounded px-2 py-0 my-3 text-center">
+	<div class="col-lg-6 mx-auto">
+		<!--NOTE: Labels are longer so column sizes here are larger-->
+		<form method="POST" id="editEvacuationForm">
+			<h1 class="display-5 fw-bold">Edit Disaster</h1>
 
-				<div class="row mb-3">
-					<p class="text-danger text-end">* Required field</p>
-				</div>
+			<br />
 
-				<!-- Disaster Name -->
-				<div class="mb-3">
-					<label class="form-label">
-						Disaster Name:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>
+			<input type="hidden" name="disasterID" value="@Model.disasterInfo.disasterID" />
+
+			<!-- Disaster Name -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="disasterName">Disaster Name:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
 					<input type="text" class="form-control" name="disasterName" value="@Model.disasterInfo.disasterName" placeholder="e.g. Typhoon Pedro" required maxlength="65">
 				</div>
+			</div>
 
-				<!-- Disaster Type -->
-				<div class="mb-3">
-					<label class="form-label">
-						Disaster Type:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>
+			<!-- Disaster Type -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="disasterName">Disaster Type:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
 					<select class="form-select" name="disasterType" required>
 						<option value="" selected disabled>Select Disaster Type</option>
 						@if (Model.DisasterTypes != null)
@@ -67,32 +59,32 @@
 						}
 					</select>
 				</div>
+			</div>
 
-				<!-- Date Occurred -->
-				<div class="mb-3">
-					<label class="form-label">
-						Date Occurred:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>
-					<input type="date" class="form-control text-muted" name="dateOccured" value="@Model.disasterInfo.dateOccured" required pattern="\d{4}-\d{2}-\d{2}">
+			<!-- Date Occurred -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="disasterName">Date Occured:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
+					<input type="date" class="form-control" name="dateOccured" value="@Model.disasterInfo.dateOccured" required pattern="\d{4}-\d{2}-\d{2}">
 				</div>
+			</div>
 
-				<!-- Disaster Description -->
-				<div class="mb-3">
-					<label class="form-label">
-						Description:
-						<span class="text-danger" style="padding: 5px">*</span>
-					</label>
+			<!-- Disaster Description -->
+			<div class="row mb-1">
+				<label class="col-sm-4 col-form-label text-start" for="disasterName">Description:<span class="text-danger" style="padding:5px">*</span></label>
+				<div class="col-sm-8">
 					<textarea class="form-control" name="description" rows="4" required>@Model.disasterInfo.description</textarea>
 				</div>
+			</div>
 
-				<!-- Cancel and Save Button -->
-				<div class="button-spacer">
-					<a class="btn btn-outline-secondary mr-10" href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" role="button">Cancel</a>
-					<button type="button" id="submitBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
-				</div>
-			</form>
-		</div>
+			<br />
+
+			<!-- Cancel and Save Button -->
+			<div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+				<a href="/disaster/profile/index?disasterID=@Model.disasterInfo.disasterID" type="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
+				<button type ="button" id="submitBtn" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editConfirmationModal">Save</button>
+			</div>
+		</form>
 	</div>
 </div>
 
