--- a/Pages/disaster/profile/entrylog/CheckIn.cshtml
+++ b/Pages/disaster/profile/entrylog/CheckIn.cshtml
@@ -24,140 +24,139 @@
     </div>
 }
 
-<div class="container p-2 form-container">
-    <div class="container mt-4 form-container-content">
-        <div class="row">
-            <div class="col text-center">
-                <h1>Check-in Evacuee</h1>
-            </div>
-        </div>
-        <form method="POST" id="checkIn">
-            <input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
-            <div class="row pt-4">
-                <div class="col-lg-12">
-                    <table id="entrylog-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
-                        <thead>
+<div class="bg-light rounded px-2 py-0 my-3">
+    <form method="POST" id="saveAllocateEC">
+        <h1 class="display-5 fw-bold text-center">Check-in Evacuee</h1>
+
+        <br />
+
+        <input type="hidden" name="centerLogID" value="@Model.logInfo.centerLogID" />
+
+        <div class="row pt-4">
+            <div class="col-lg-12">
+                <table id="entrylog-table" class="table display compact order-column table-hover" cellspacing="0" width="100%">
+                    <thead>
+                        <tr>
+                            <th>
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox" id="selectAllCheckboxes">
+                                    <label class="form-check-label"></label>
+                                </div>
+                            </th>
+                            <th>Name</th>
+                            <th style="text-align: center;">Sex</th>
+                            <th>Birthdate</th>
+                            <th>Age</th>
+                            <th>Barangay</th>
+                            <th>Remarks</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model.listLatestEntry)
+                        {
                             <tr>
-                                <th>
+                                <td width="5%">
                                     <div class="form-check">
-                                        <input class="form-check-input" type="checkbox" id="selectAllCheckboxes">
+                                        <input class="form-check-input" type="checkbox" value="@item.memberID" name="selectedEvacuees[]">
                                         <label class="form-check-label"></label>
                                     </div>
-                                </th>
-                                <th>Name</th>
-                                <th style="text-align: center;">Sex</th>
-                                <th>Birthdate</th>
-                                <th>Age</th>
-                                <th>Barangay</th>
-                                <th>Remarks</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in Model.listLatestEntry)
-                            {
-                                <tr>
-                                    <td width="5%">
-                                        <div class="form-check">
-                                            <input class="form-check-input" type="checkbox" value="@item.memberID" name="selectedEvacuees[]">
-                                            <label class="form-check-label"></label>
-                                        </div>
-                                    </td>
-                                    <td width="25%">@item.fullName</td>
-                                    <td width="5%" style="text-align: center;">@item.sex</td>
-                                    <td width="20%" style="text-align: center;">@item.birthdate</td>
-                                    <td width="5%" style="text-align: center;">@item.age</td>
-                                    <td width="20%" style="text-align: center;">@item.barangayName</td>
-                                    <td>
-                                        @{
-                                            int age;
-                                            if (int.TryParse(@item.age, out age))
+                                </td>
+                                <td width="25%">@item.fullName</td>
+                                <td width="5%" style="text-align: center;">@item.sex</td>
+                                <td width="20%" style="text-align: center;">@item.birthdate</td>
+                                <td width="5%" style="text-align: center;">@item.age</td>
+                                <td width="20%" style="text-align: center;">@item.barangayName</td>
+                                <td>
+                                    @{
+                                        int age;
+                                        if (int.TryParse(@item.age, out age))
+                                        {
+                                            if (@item.sex == "M")
                                             {
-                                                if (@item.sex == "M")
+                                                if (age <= 17)
                                                 {
-                                                    if (age <= 17)
-                                                    {
-                                                        <select class="form-select role-select" name="remarks[]" required disabled>
-                                                            <option value="" disabled>Select</option>
-                                                            <option value="None">None</option>
-                                                            <option value="PWD">PWD</option>
-                                                            <option value="Children" selected>Children</option>
-                                                        </select>
-                                                    }
-                                                    else if (age >= 65)
-                                                    {
-                                                        <select class="form-select role-select" name="remarks[]" required disabled>
-                                                            <option value="" disabled>Select</option>
-                                                            <option value="None">None</option>
-                                                            <option value="Elderly" selected>Elderly</option>
-                                                            <option value="PWD">PWD</option>
-                                                        </select>
-                                                    }
-                                                    else
-                                                    {
-                                                        <select class="form-select role-select" name="remarks[]" required disabled>
-                                                            <option value="" selected disabled>Select</option>
-                                                            <option value="None">None</option>
-                                                            <option value="PWD">PWD</option>
-                                                        </select>
-                                                    }
+                                                    <select class="form-select role-select" name="remarks[]" required disabled>
+                                                        <option value="" disabled>Select</option>
+                                                        <option value="None">None</option>
+                                                        <option value="PWD">PWD</option>
+                                                        <option value="Children" selected>Children</option>
+                                                    </select>
                                                 }
-                                                else if (@item.sex == "F")
+                                                else if (age >= 65)
                                                 {
-                                                    if (age <= 17)
-                                                    {
-                                                        <select class="form-select role-select" name="remarks[]" required disabled>
-                                                            <option value="" disabled>Select</option>
-                                                            <option value="None">None</option>
-                                                            <option value="PWD">PWD</option>
-                                                            <option value="Children" selected>Children</option>
-                                                            <option value="Pregnant Woman">Pregnant Woman</option>
-                                                            <option value="Lactating Mother">Lactating Mother</option>
-                                                        </select>
-                                                    }
-                                                    else if (age >= 65)
-                                                    {
-                                                        <select class="form-select role-select" name="remarks[]" required disabled>
-                                                            <option value="" disabled>Select</option>
-                                                            <option value="None">None</option>
-                                                            <option value="Elderly" selected>Elderly</option>
-                                                            <option value="PWD">PWD</option>
-                                                            <option value="Pregnant Woman">Pregnant Woman</option>
-                                                            <option value="Lactating Mother">Lactating Mother</option>
-                                                        </select>
-                                                    }
-                                                    else
-                                                    {
-                                                        <select class="form-select role-select" name="remarks[]" required disabled>
-                                                            <option value="" selected disabled>Select</option>
-                                                            <option value="None">None</option>
-                                                            <option value="PWD">PWD</option>
-                                                            <option value="Pregnant Woman">Pregnant Woman</option>
-                                                            <option value="Lactating Mother">Lactating Mother</option>
-                                                        </select>
-                                                    }
+                                                    <select class="form-select role-select" name="remarks[]" required disabled>
+                                                        <option value="" disabled>Select</option>
+                                                        <option value="None">None</option>
+                                                        <option value="Elderly" selected>Elderly</option>
+                                                        <option value="PWD">PWD</option>
+                                                    </select>
+                                                }
+                                                else
+                                                {
+                                                    <select class="form-select role-select" name="remarks[]" required disabled>
+                                                        <option value="" selected disabled>Select</option>
+                                                        <option value="None">None</option>
+                                                        <option value="PWD">PWD</option>
+                                                    </select>
                                                 }
                                             }
-                                            else
+                                            else if (@item.sex == "F")
                                             {
-                                                <p>Error: Invalid age</p>
+                                                if (age <= 17)
+                                                {
+                                                    <select class="form-select role-select" name="remarks[]" required disabled>
+                                                        <option value="" disabled>Select</option>
+                                                        <option value="None">None</option>
+                                                        <option value="PWD">PWD</option>
+                                                        <option value="Children" selected>Children</option>
+                                                        <option value="Pregnant Woman">Pregnant Woman</option>
+                                                        <option value="Lactating Mother">Lactating Mother</option>
+                                                    </select>
+                                                }
+                                                else if (age >= 65)
+                                                {
+                                                    <select class="form-select role-select" name="remarks[]" required disabled>
+                                                        <option value="" disabled>Select</option>
+                                                        <option value="None">None</option>
+                                                        <option value="Elderly" selected>Elderly</option>
+                                                        <option value="PWD">PWD</option>
+                                                        <option value="Pregnant Woman">Pregnant Woman</option>
+                                                        <option value="Lactating Mother">Lactating Mother</option>
+                                                    </select>
+                                                }
+                                                else
+                                                {
+                                                    <select class="form-select role-select" name="remarks[]" required disabled>
+                                                        <option value="" selected disabled>Select</option>
+                                                        <option value="None">None</option>
+                                                        <option value="PWD">PWD</option>
+                                                        <option value="Pregnant Woman">Pregnant Woman</option>
+                                                        <option value="Lactating Mother">Lactating Mother</option>
+                                                    </select>
+                                                }
                                             }
                                         }
-                                    </td>
+                                        else
+                                        {
+                                            <p>Error: Invalid age</p>
+                                        }
+                                    }
+                                </td>
 
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
 
-                    <!-- Cancel and Check-in Buttons -->
-                    <div class="button-spacer">
-                        <a class="btn btn-outline-secondary mr-10" href="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID">Cancel</a>
-                        <button type="button" class="btn btn-primary" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal" disabled>Check-in</button>
-                    </div>
+
+                <!-- Cancel and Save Button -->
+                <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+                    <a href="/disaster/profile/entrylog/index?centerLogID=@Model.logInfo.centerLogID" type="button" class="btn btn-outline-secondary px-4 gap-3">Cancel</a>
+                    <button type="button" class="btn btn-primary" name="saveSelection" data-bs-toggle="modal" data-bs-target="#confirmSaveModal">Save</button>
                 </div>
             </div>
-        </form>
-    </div>
+        </div>
+    </form>
 </div>
 
 <!-- Modal: Confirm Check-in -->
